# sailboat_simulator

./: Cargo.toml
src/: autopilot.rs  bin.rs  generic_ref.rs  intv2.rs  lib.rs  resource_interface.rs
src/client/: mod.rs
src/server/: mod.rs  simulator.rs
src/simulation/: boat.rs  flat_object_physics.rs  mod.rs  physical_integrator.rs  user.rs  wind.rs
